--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "fs": "0.0.2",
-    "http": "0.0.0"
+    "http": "0.0.0",
+    "rsvp": "^3.2.1"
   }
 }
